HTML mark up done.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <h1>Memorise II</h1>
+  <p>Lives Remains: <span class="lives"></span></p>
+  <div class="card-table"></div>
   <script src="script.js"></script>
 </body>
 </html>
